--- a/index.html
+++ b/index.html
@@ -11,37 +11,212 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Musicalmente Vivo</title>
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+      <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="#"
+            ><img src="./images/LOGO.png" alt="Logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tienda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Marcas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="container my-2">
+        <div class="row">
+          <div class="col">
+            <h1 class="h1 text-center fw-bold">MUSICALMENTE VIVO</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h4 class="text-center">
+              <small class="h4 text-muted">Tu tienda favorita online </small>
+            </h4>
+          </div>
+        </div>
+      </div>
+      <section class="container">
+        <div id="carouselExample" class="carousel slide">
+          <div class="row">
+            <div class="col">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="card bg-dark text-white">
+                    <img
+                      src="./images/fender.jpg"
+                      class="card-img rounded mx-auto d-block w-100"
+                      alt="guitarras"
+                    />
+                    <div class="card-img-overlay">
+                      <h4 class="card-title">PRIMERAS MARCAS</h4>
+                      <p class="card-text">
+                        Siempre pensando en lo mejor para el Musico
+                      </p>
+                      <p class="card-text">Calidad garantizada</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="card bg-dark text-white">
+                    <img
+                      src="./images/Drumone.png"
+                      class="card-img rounded mx-auto d-block w-100"
+                      alt="bateria"
+                    />
+                    <div class="card-img-overlay">
+                      <h4 class="card-title">EXPLOTA TU POTENCIAL</h4>
+                      <p class="card-text">Encuentra tu estilo propio</p>
+                      <p class="card-text">Llega a donde siempre soñaste</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="card bg-dark text-white">
+                    <img
+                      src="./images/Sitetizadorone.png"
+                      class="card-img rounded mx-auto d-block w-100"
+                      alt="sintetizador"
+                    />
+                    <div class="card-img-overlay">
+                      <h4 class="card-title">CON LOS NUEVOS SINTETIZADORES</h4>
+                      <p class="card-text">
+                        Navegaras en un mar de sonidos inimaginables
+                      </p>
+                      <p class="card-text">Conviertete en leyenda</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExample"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li>
-                </ul>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExample"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container my-4">
+          <div class="row">
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img src="./images/bajo.jpg" class="card-img-top" alt="bajos" />
+                <div class="card-body">
+                  <h5 class="card-title text-center fw-bold">
+                    BAJOS ELECTRICOS
+                  </h5>
+                  <p class="card-text">
+                    Sonidos profundos <br />
+                    Sumergete en un mundo nuevo, experimentando entre pastillas
+                    activas y pasivas.
+                  </p>
+                  <a href="#" class="btn btn-primary">Vamos a ver</a>
+                </div>
               </div>
             </div>
-          </nav>
-    </header>
-
-
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="./images/microfonos.png"
+                  class="card-img-top"
+                  alt="microfonos"
+                />
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-center">MICROFONOS</h5>
+                  <p class="card-text">
+                    Sonidos que salen del alma <br />
+                    Encuentra tu voz interior, ve mas alla de tus sueños. Estas
+                    en el lugar correcto.
+                  </p>
+                  <a href="#" class="btn btn-primary">Vamos a ver</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="./images/acusticas.png"
+                  class="card-img-top"
+                  alt="guitarras acusticas"
+                />
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-center">
+                    GUITARRAS ACUSTICAS
+                  </h5>
+                  <p class="card-text">
+                    Que siempre te acompañe <br />
+                    Nunca sabes cuando tu compañera podra hacer sonar esa
+                    melodia que por las noches no te deja dormir
+                  </p>
+                  <a href="#" class="btn btn-primary">Vamos a ver</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="container-fluid bg-dark">
+        <div class="row">
+          <div class="col"></div>
+        </div>
+      </footer>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
