--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
       <footer class="container-fluid bg-dark">
         <div class="row">
           <div class="col"></div>
+          <p>Este es el footer</p>
         </div>
       </footer>
     </main>
