--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </nav>
     </header>
     <main>
-      <div class="container my-2">
+      <div class="container my-3">
         <div class="row">
           <div class="col">
             <h1 class="h1 text-center fw-bold">MUSICALMENTE VIVO</h1>
@@ -211,16 +211,81 @@
           </div>
         </div>
       </section>
-      <footer class="container-fluid bg-dark">
-        <div class="row">
-          <div class="col"></div>
-          <p>Este es el footer</p>
+      <footer class="bg-dark text-light pt-5 pb-4">
+        <div class="container">
+          <div class="row">
+            <div class="col mt-3">
+              <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
+                CONTACTO
+              </h5>
+              <hr class="mb-4" />
+              <p>
+                <li class="fa-solid fa-house me-3" style="color: #f7f7f8"></li>
+                Mar del Plata, Montiel 456
+              </p>
+              <p>
+                <li
+                  class="fa-solid fa-envelope me-3"
+                  style="color: #f7f7f8"
+                ></li>
+                info@musicalmentevivo.com
+              </p>
+              <p>
+                <li class="fa-solid fa-phone me-3" style="color: #f7f7f8"></li>
+                +549 0223-5648291
+              </p>
+              <p>
+                <li
+                  class="fa-brands fa-whatsapp me-3"
+                  style="color: #f7f7f8"
+                ></li>
+                +549 0223-6821945
+              </p>
+            </div>
+            <div class="col text-end mt-3">
+              <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
+                NUESTRAS REDES
+              </h5>
+              <hr class="mb-4" />
+              <ul class="list-unstyled list-inline">
+                <li class="list-inline-item">
+                  <a href="#"
+                    ><i class="fa-brands fa-facebook"></i
+                  ></a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#"
+                    ><i class="fa-brands fa-youtube"></i
+                  ></a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#"
+                    ><i class="fa-brands fa-twitter"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="row text-start">
+            <div class="col text-center mt-4">
+              <p>&copy;Musicalmente Vivo 2023 Todos los derechos reservados</p>
+            </div>
+          </div>
         </div>
       </footer>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
     ></script>
   </body>
