--- a/index.html
+++ b/index.html
@@ -249,24 +249,16 @@
               <hr class="mb-4" />
               <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                  <a href="#"
-                    ><i class="fa-brands fa-facebook"></i
-                  ></a>
+                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#"
-                    ><i class="fa-brands fa-instagram"></i
-                  ></a>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#"
-                    ><i class="fa-brands fa-youtube"></i
-                  ></a>
+                  <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#"
-                    ><i class="fa-brands fa-twitter"></i
-                  ></a>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </li>
               </ul>
             </div>
