Nav y Footer en todos los html

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 <a class="nav-link" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tienda</a>
+                <a class="nav-link" href="./pages/tienda.html">Tienda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Marcas</a>
+                <a class="nav-link" href="./pages/marcas.html">Marcas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Nosotros</a>
+                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="./pages/contacto.html" target="_blank">Contacto</a>
               </li>
             </ul>
           </div>
