--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -14,6 +14,7 @@
     <title>Tu tienda online favorita</title>
   </head>
   <body>
+    <!-- Header & Nav -->
     <header>
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container">
@@ -59,6 +60,387 @@
       </nav>
     </header>
     <main>
+      <!-- Seccion de tienda -->
+      <section class="container-fluid">
+        <div class="row my-4">
+          <div class="col text-center fw-bold">
+            <h1>TIENDA ONLINE</h1>
+          </div>
+        </div>
+        <!-- Guitarras -->
+        <div class="row my-4">
+          <div class="col text-center">
+            <h3>GUITARRAS</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/fender.webp"
+                class="card-img-top"
+                alt="Guitarra Fender Stratocaster"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Fender Stratocaster <br />
+                  Serie Sss
+                </h5>
+                <p class="card-text">$ 699.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/lespaul.png"
+                class="card-img-top"
+                alt="Guitarra Gibson Les Paul"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Gibson Les Paul <br />
+                  Standard 60s
+                </h5>
+                <p class="card-text">$ 759.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/yamaha.webp"
+                class="card-img-top"
+                alt="Guitarra Yamaha Acustica"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Yamaha Acustica F370 Flok 4/4 Tobacco
+                </h5>
+                <p class="card-text">$ 299.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/criolla.jpg"
+                class="card-img-top"
+                alt="Guitarra Criolla"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Criolla Clasica Natural Opaca
+                </h5>
+                <p class="card-text">$ 99.000,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Bajos y Baterias -->
+        <div class="row my-4">
+          <div class="col text-center mt-4">
+            <h3>BAJOS Y BATERIAS</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/bajo-gibson.jpg"
+                class="card-img-top"
+                alt="Bajo Gibson"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Gibson Epiphone <br />
+                  EB-3
+                </h5>
+                <p class="card-text">$ 199.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/bajo-yamaha.webp"
+                class="card-img-top"
+                alt="Bajo Yamaha"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  YAMAHA TRBX200 <br />
+                  Series
+                </h5>
+                <p class="card-text">$ 459.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/bateria-yamaha.webp"
+                class="card-img-top"
+                alt="Bateria Yamaha Acustica"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Yamaha STAGE CUSTOM Birch 18"
+                </h5>
+                <p class="card-text">$ 436.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/bateria-tama.jpg"
+                class="card-img-top"
+                alt="Guitarra Criolla"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Serie SilverStar 16+10+13TF Vintage
+                </h5>
+                <p class="card-text">$ 500.000,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Pianos y Sintetizadores -->
+        <div class="row my-4">
+          <div class="col text-center mt-4">
+            <h3>PIANOS Y SINTETIZADORES</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/korg.jpg"
+                class="card-img-top"
+                alt="Teclado Korg"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  KORG Pa700 profesional inteligente 61 teclas
+                </h5>
+                <p class="card-text">$ 889.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/roland.jpg"
+                class="card-img-top"
+                alt="Teclado Roland"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Roland OR-RL-GO Portatil Go Keys 61KL
+                </h5>
+                <p class="card-text">$ 241.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/sintetizadorPolv.jpg"
+                class="card-img-top"
+                alt="Sintetizador Poly D"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Sintetizador Behringer Poly D Itbehpolyd
+                </h5>
+                <p class="card-text">$ 350.000,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/nordwave.jpg"
+                class="card-img-top"
+                alt="Sintetizaor Nord Wave"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Sintetizador Clavia Nord Wave 2 61 teclas
+                </h5>
+                <p class="card-text">$ 500.000,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Microfonos y Vientos -->
+        <div class="row my-4">
+          <div class="col text-center mt-4">
+            <h3>MICROFONOS Y VIENTOS</h3>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/shurei.webp"
+                class="card-img-top"
+                alt="Microfono shure inalambrico"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Sistema Inalambrico digital Shure SLXD-124AR/85-G58
+                </h5>
+                <p class="card-text">$ 599.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/rode.jpg"
+                class="card-img-top"
+                alt="Microfono Rode"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Microfono Rode NT1-A Condensador
+                </h5>
+                <p class="card-text">$ 241.999,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/saxofon.jpg"
+                class="card-img-top"
+                alt="Saxofon alto"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Saxofon Alto KEILWERTH 2103 Lacador Dorado-Miel
+                </h5>
+                <p class="card-text">$ 388.500,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="../images/tienda/trompeta.jpg"
+                class="card-img-top"
+                alt="Trompeta Yamaha
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Trompeta Yamaha YTR2330 en SI bemol Acabado lacado
+                </h5>
+                <p class="card-text">$ 500.000,00</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                  </div>
+                  <a href="#" class="btn btn-success">Detalles</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Footer -->
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
@@ -119,6 +501,7 @@
         </div>
       </footer>
     </main>
+    <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
