--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Header & Nav -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-dark">
+      <nav class="navbar navbar-expand-lg bg-secondary">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
             ><img src="../images/LOGO.png" alt="Logo"
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/fender.webp"
@@ -96,7 +96,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/lespaul.png"
@@ -118,7 +118,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/yamaha.webp"
@@ -139,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/criolla.jpg"
@@ -168,7 +168,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bajo-gibson.jpg"
@@ -190,7 +190,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bajo-yamaha.webp"
@@ -212,7 +212,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bateria-yamaha.webp"
@@ -233,7 +233,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bateria-tama.jpg"
@@ -262,7 +262,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/korg.jpg"
@@ -283,7 +283,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/roland.jpg"
@@ -304,7 +304,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/sintetizadorPolv.jpg"
@@ -325,7 +325,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/nordwave.jpg"
@@ -354,7 +354,7 @@
           </div>
         </div>
         <div class="row mb-4">
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/shurei.webp"
@@ -375,7 +375,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/rode.jpg"
@@ -396,7 +396,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/saxofon.jpg"
@@ -417,12 +417,12 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/trompeta.jpg"
                 class="card-img-top"
-                alt="Trompeta Yamaha
+                alt="Trompeta Yamaha"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -444,7 +444,7 @@
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
-            <div class="col mt-3">
+            <div class="col-sm-12 col-md-6 mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 CONTACTO
               </h5>
@@ -472,7 +472,7 @@
                 +549 0223-6821945
               </p>
             </div>
-            <div class="col text-end mt-3">
+            <div class="col-sm-12 col-md-6 text-end mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 NUESTRAS REDES
               </h5>
