Retoques despues del responsive

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Header & Nav -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-secondary">
+      <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
             ><img src="../images/LOGO.png" alt="Logo"
@@ -64,17 +64,17 @@
       <section class="container-fluid">
         <div class="row my-4">
           <div class="col text-center fw-bold">
-            <h1>TIENDA ONLINE</h1>
+            <h1 class="h1-tienda">TIENDA ONLINE</h1>
           </div>
         </div>
         <!-- Guitarras -->
-        <div class="row my-4">
-          <div class="col text-center">
-            <h3>GUITARRAS</h3>
+        <div class="row">
+          <div class="col text-start">
+            <h4>GUITARRAS</h4>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/fender.webp"
@@ -96,7 +96,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/lespaul.png"
@@ -118,7 +118,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/yamaha.webp"
@@ -139,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/criolla.jpg"
@@ -162,13 +162,13 @@
           </div>
         </div>
         <!-- Bajos y Baterias -->
-        <div class="row my-4">
-          <div class="col text-center mt-4">
-            <h3>BAJOS Y BATERIAS</h3>
+        <div class="row mt-4">
+          <div class="col text-start">
+            <h4>BAJOS Y BATERIAS</h4>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bajo-gibson.jpg"
@@ -190,7 +190,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bajo-yamaha.webp"
@@ -212,7 +212,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bateria-yamaha.webp"
@@ -233,7 +233,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bateria-tama.jpg"
@@ -256,13 +256,13 @@
           </div>
         </div>
         <!-- Pianos y Sintetizadores -->
-        <div class="row my-4">
-          <div class="col text-center mt-4">
-            <h3>PIANOS Y SINTETIZADORES</h3>
+        <div class="row mt-4">
+          <div class="col text-start">
+            <h4>PIANOS Y SINTETIZADORES</h4>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/korg.jpg"
@@ -283,7 +283,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/roland.jpg"
@@ -304,7 +304,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/sintetizadorPolv.jpg"
@@ -325,7 +325,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/nordwave.jpg"
@@ -348,13 +348,13 @@
           </div>
         </div>
         <!-- Microfonos y Vientos -->
-        <div class="row my-4">
-          <div class="col text-center mt-4">
-            <h3>MICROFONOS Y VIENTOS</h3>
+        <div class="row mt-4">
+          <div class="col text-start">
+            <h4>MICROFONOS Y VIENTOS</h4>
           </div>
         </div>
         <div class="row mb-4">
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/shurei.webp"
@@ -375,7 +375,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/rode.jpg"
@@ -396,7 +396,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/saxofon.jpg"
@@ -417,7 +417,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/trompeta.jpg"
@@ -426,7 +426,7 @@
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
-                  Trompeta Yamaha YTR2330 en SI bemol Acabado lacado
+                  Trompeta Yamaha YTR2330 en SI bemol
                 </h5>
                 <p class="card-text">$ 500.000,00</p>
                 <div class="d-flex justify-content-between align-items-center">
