--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="style.css" />
     <title>Musicalmente Vivo</title>
   </head>
-  <body>
+  <body class="body">
+    <!-- Header y Nav -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-dark">
+      <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="#"
             ><img src="./images/LOGO.png" alt="Logo"
@@ -57,6 +58,7 @@
       </nav>
     </header>
     <main>
+      <!-- Encabezados -->
       <div class="container my-3">
         <div class="row">
           <div class="col">
@@ -71,6 +73,7 @@
           </div>
         </div>
       </div>
+      <!-- Carrousel de imagenes -->
       <section class="container">
         <div id="carouselExample" class="carousel slide">
           <div class="row">
@@ -151,10 +154,16 @@
           </div>
         </div>
       </section>
+      <!-- Cards de sugerencias -->
       <section>
         <div class="container my-4">
           <div class="row">
-            <div class="col">
+            <div class="col text-end mt-4">
+              <h3>SUGERENCIAS</h3>
+            </div>
+          </div>
+          <div class="row mb-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
               <div class="card" style="width: 18rem">
                 <img src="./images/bajo.jpg" class="card-img-top" alt="bajos" />
                 <div class="card-body">
@@ -170,7 +179,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
               <div class="card" style="width: 18rem">
                 <img
                   src="./images/microfonos.png"
@@ -188,7 +197,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
               <div class="card" style="width: 18rem">
                 <img
                   src="./images/acusticas.png"
@@ -211,10 +220,11 @@
           </div>
         </div>
       </section>
+      <!-- Footer -->
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
-            <div class="col mt-3">
+            <div class="col-sm-12 col-md-6 mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 CONTACTO
               </h5>
@@ -242,7 +252,7 @@
                 +549 0223-6821945
               </p>
             </div>
-            <div class="col text-end mt-3">
+            <div class="col-sm-12 col-md-6 text-end mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 NUESTRAS REDES
               </h5>
@@ -271,6 +281,7 @@
         </div>
       </footer>
     </main>
+    <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
