--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,8 +14,9 @@
     <title>Musicalmente Vivo</title>
   </head>
   <body>
+    <!-- Header y Nav -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-dark">
+      <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
             ><img src="../images/LOGO.png" alt="Logo"
@@ -57,6 +58,7 @@
       </nav>
     </header>
     <main>
+      <!-- Footer -->
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
@@ -117,6 +119,7 @@
         </div>
       </footer>
     </main>
+    <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
