Centrado de Cards

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div class="row mb-4">
-            <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center">
               <div class="card" style="width: 18rem">
                 <img src="./images/bajo.jpg" class="card-img-top" alt="bajos" />
                 <div class="card-body">
@@ -179,7 +179,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center">
               <div class="card" style="width: 18rem">
                 <img
                   src="./images/microfonos.png"
@@ -197,7 +197,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center">
               <div class="card" style="width: 18rem">
                 <img
                   src="./images/acusticas.png"
@@ -229,6 +229,10 @@
                 CONTACTO
               </h5>
               <hr class="mb-4" />
+              </div>
+              </div>
+              <div class="row">
+                <div class="col col-sm-12 col-md-6 mt-3">
               <p>
                 <li class="fa-solid fa-house me-3" style="color: #f7f7f8"></li>
                 Mar del Plata, Montiel 456
@@ -251,12 +255,18 @@
                 ></li>
                 +549 0223-6821945
               </p>
+              </div>
             </div>
+            <div class="row d-flex justify-content-end">
             <div class="col-sm-12 col-md-6 text-end mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 NUESTRAS REDES
               </h5>
               <hr class="mb-4" />
+              </div>
+              </div>
+              <div class="row d-flex justify-content-end">
+                <div class="col text-end mt-3">
               <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
                   <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -271,8 +281,9 @@
                   <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </li>
               </ul>
+              </div>
+              </div>
             </div>
-          </div>
           <div class="row text-start">
             <div class="col text-center mt-4">
               <p>&copy;Musicalmente Vivo 2023 Todos los derechos reservados</p>
