--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -10,7 +10,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../SCSS/styles.css" />
     <title>Tu tienda online favorita</title>
   </head>
   <body>
@@ -59,18 +59,18 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="contenedor-tienda">
       <!-- Seccion de tienda -->
       <section class="container-fluid">
         <div class="row my-4">
           <div class="col text-center fw-bold">
-            <h1 class="h1-tienda">TIENDA ONLINE</h1>
+            <h1 class="borde-tienda">TIENDA ONLINE</h1>
           </div>
         </div>
         <!-- Guitarras -->
         <div class="row">
           <div class="col text-start">
-            <h4>GUITARRAS</h4>
+            <h4 class="borde-secciones">GUITARRAS</h4>
           </div>
         </div>
         <div class="row">
@@ -164,7 +164,7 @@
         <!-- Bajos y Baterias -->
         <div class="row mt-4">
           <div class="col text-start">
-            <h4>BAJOS Y BATERIAS</h4>
+            <h4 class="borde-secciones">BAJOS Y BATERIAS</h4>
           </div>
         </div>
         <div class="row">
@@ -258,7 +258,7 @@
         <!-- Pianos y Sintetizadores -->
         <div class="row mt-4">
           <div class="col text-start">
-            <h4>PIANOS Y SINTETIZADORES</h4>
+            <h4 class="borde-secciones">PIANOS Y SINTETIZADORES</h4>
           </div>
         </div>
         <div class="row">
@@ -350,7 +350,7 @@
         <!-- Microfonos y Vientos -->
         <div class="row mt-4">
           <div class="col text-start">
-            <h4>MICROFONOS Y VIENTOS</h4>
+            <h4 class="borde-secciones">MICROFONOS Y VIENTOS</h4>
           </div>
         </div>
         <div class="row mb-4">
