--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="SCSS/styles.css" />
     <title>Musicalmente Vivo</title>
   </head>
   <body class="body">
@@ -61,8 +61,8 @@
       <!-- Encabezados -->
       <div class="container my-3">
         <div class="row">
-          <div class="col">
-            <h1 class="h1 text-center fw-bold">MUSICALMENTE VIVO</h1>
+          <div class="col text-center">
+            <h1 class="fw-bold">MUSICALMENTE VIVO</h1>
           </div>
         </div>
         <div class="row">
