--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -38,7 +38,9 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="../index.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./tienda.html">Tienda</a>
@@ -58,7 +60,355 @@
       </nav>
     </header>
     <main>
-      <!-- Footer -->
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h1>NUESTRAS MARCAS</h1>
+            </div>
+          </div>
+          <!-- Aqui empiezan las cards, en cada fila puse dos columnas, y dentro de cada columna dos card de bootstrap -->
+          <div class="row">
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/fender.jpg"
+                      class="img-fluid rounded-start"
+                      alt="logo fender"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Fender®</h5>
+                      <p class="card-text">
+                        Es una de las marcas Top del mercado, abarca dese
+                        Guitarras hasta Bajos y Amplificadores. La compañía
+                        comenzó con el nombre de 'Fender's Radio Service' en
+                        1938, en Fullerton, California. Como técnico calificado
+                        en electrónica, Leo Fender era contratado no solo para
+                        reparar radios, sino también fonolas, sistemas de audio
+                        particulares y amplificadores
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/squier.jpg"
+                      class="img-fluid rounded-start"
+                      alt="logo squier"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Squier by Fender®</h5>
+                      <p class="card-text">
+                        Squier es una marca derivada de Musical Instruments
+                        Company que produce principalmente instrumentos
+                        musicales derivados de la línea de productos de Fender.
+                        Sus modelos varían desde los económicos como aquellos de
+                        entrada a la línea hasta el tope de gama con productos
+                        que han hecho historia en el mundo de las guitarras como
+                        son los de la serie Classic Vibe.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/beringer.png"
+                      class="img-fluid rounded-start"
+                      alt="logo beringher"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Behringer</h5>
+                      <p class="card-text">
+                        Behringer es una empresa alemana creada en 1989; a
+                        partir de una pequeña industria se transformó en un
+                        grupo de compañías presente en ocho países, con una
+                        cadena de distribución que liga a otros 120. Su misión:
+                        hacer el audio profesional accesible a las masas.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/gibson.jpg"
+                      class="img-fluid rounded-start"
+                      alt="logo gibson"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Gibson®</h5>
+                      <p class="card-text">
+                        Gibson Brands es una de las empresas más grandes de
+                        fabricación de guitarras. Se fundó en 1894 por Orville
+                        Gibson en la ciudad de Kalamazoo, Míchigan, Estados
+                        Unidos. Su sede se encuentra en Nashville, Tennessee.
+                        Actualmente posee una de las guitarras mas buscadas del
+                        mercado, la Sg-Standard
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/korg.png"
+                      class="img-fluid rounded-start"
+                      alt="logo korg"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Korg®</h5>
+                      <p class="card-text">
+                        Korg es una empresa japonesa de instrumentos musicales
+                        electrónicos y afinadores de guitarra. Actualmente, Korg
+                        se encuentra a la vanguardia en la fabricación de
+                        sintetizadores musicales profesionales con su serie de
+                        workstations, y en la definición de nuevas herramientas
+                        musicales con su tecnología Kaoss.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/nord.png"
+                      class="img-fluid rounded-start"
+                      alt="logo nord"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Clavia Nord®</h5>
+                      <p class="card-text">
+                        Clavia Digital Musical Instruments (Clavia DMI AB) es
+                        una compañía sueca fundada en Estocolmo el año 1983 por
+                        Hans Nordelius y Mikael Carlsson. Actualmente se
+                        especializa en la fabricación de sintetizadores
+                        analógicos virtuales, pianos electromecánicos virtuales
+                        y pianos de concierto. Actualmente se encuentra en el
+                        tope gama de instrumentos.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/rode.jpg"
+                      class="img-fluid rounded-start"
+                      alt="logo rode"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Rode® Microfonos</h5>
+                      <p class="card-text">
+                        Røde es tradicionalmente conocida por sus micrófonos de
+                        condensador de gran diafragma (1 ") , ya que fue el área
+                        en la que la empresa se especializó exclusivamente
+                        durante sus primeros diez años de funcionamiento [ref].
+                        La empresa fabrica tanto válvulas / tubos como
+                        variedades de estado sólido, como así como modelos que
+                        ofrecen patrones polares variables y filtros de
+                        ecualización. El NT1-
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/roland.jpg"
+                      class="img-fluid rounded-start"
+                      alt="logo roland"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Roland®</h5>
+                      <p class="card-text">
+                        Roland corporation es un fabricante japonés de
+                        instrumentos musicales electrónicos, Actualmente es una
+                        de las empresas musicales con más prestigio en todo el
+                        mundo. Sus productos van desde amplificadores hasta
+                        teclados, aunque el producto más representativo son los
+                        sintetizadores. Muchas agrupaciones musicales consideran
+                        Teclados Roland como la herramineta musical mas
+                        adecuada.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/saxo.png"
+                      class="img-fluid rounded-start"
+                      alt="logo saxo"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Keilwerth®</h5>
+                      <p class="card-text">
+                        Aunque fue pionero en los salones de música de Europa,
+                        el saxofón Keilwerth surgió en el mercado mundial en la
+                        última parte del siglo XX debido en gran parte a los
+                        músicos de jazz americanos que abrazaron la marca por la
+                        libertad que les daba para crear su propia voz. A lo
+                        largo de los años, músicos de todos los estilos
+                        musicales han confiado en los saxofones Keilwerth por su
+                        sonido audaz y distintivo, su durabilidad y su
+                        rendimiento constante.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/shure.webp"
+                      class="img-fluid rounded-start"
+                      alt="logo shure"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Shure®</h5>
+                      <p class="card-text">
+                        Shure fue fundado en 1925 bajo el nombre de The Shure
+                        Radio Company por un magnate del audio llamado Sidney.
+                        Shure ha producido una gran gama de micrófonos durante
+                        décadas, entre los cuales están los conocidos "SM" y
+                        "Beta series" de condensador y dinámicos. Shure. La
+                        serie incluye el SM58 (El más utilizado para las voces),
+                        SM48, SM86, SM87A, SM57, SM94 y el SM81. El Beta 52A y
+                        el Beta 91 son dos de los más usados para baterías.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/tama.jpeg"
+                      class="img-fluid rounded-start"
+                      alt="logo tama"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Tama®</h5>
+                      <p class="card-text">
+                        Tama Drums (en japonés 多満 (Kanji) タマ (Kana),
+                        estilizado como TAMA) es una marca dedicada a la
+                        fabricación de instrumentos de percusión, conocida sobre
+                        todo por sus baterías. Es propiedad de la empresa
+                        Hoshino Gakki Group con sede en Seto, Japón. Sus
+                        instrumentos son utilizados principalmente por bandas de
+                        rock y heavy metal, así como por algunas de funk, pop y
+                        jazz.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../images/marcas/yamaha.webp"
+                      class="img-fluid rounded-start"
+                      alt="logo yamaha"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Yamaha®</h5>
+                      <p class="card-text">
+                        Yamaha Corporation (ヤマハ株式会社 Yamaha Kabushiki
+                        Gaisha?) es una compañía japonesa con una amplia gama de
+                        productos y servicios, sobre todo, instrumentos
+                        musicales y aparatos electrónicos. El origen de esta
+                        compañía como una fábrica de instrumentos musicales está
+                        aún reflejado en el logotipo del grupo, formado por tres
+                        diapasones cruzados.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Footer, esta echo con clases de boostrap, y con iconos externos, todo en un container y en dos columnas, menos el copiright que es una fila aparte -->
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
