--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -63,7 +63,7 @@
       <!-- Seccion de tienda -->
       <section class="container-fluid">
         <div class="row my-4">
-          <div class="col text-center fw-bold">
+          <div class="col text-center fw-bold tienda">
             <h1 class="borde-tienda">TIENDA ONLINE</h1>
           </div>
         </div>
