--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/contacto.html" target="_blank">Contacto</a>
+                <a class="nav-link" href="./pages/contacto.html" target="_blank"
+                  >Contacto</a
+                >
               </li>
             </ul>
           </div>
@@ -163,7 +165,9 @@
             </div>
           </div>
           <div class="row mb-4">
-            <div class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center">
+            <div
+              class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center"
+            >
               <div class="card" style="width: 18rem">
                 <img src="./images/bajo.jpg" class="card-img-top" alt="bajos" />
                 <div class="card-body">
@@ -179,7 +183,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center">
+            <div
+              class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center"
+            >
               <div class="card" style="width: 18rem">
                 <img
                   src="./images/microfonos.png"
@@ -197,7 +203,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center">
+            <div
+              class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center"
+            >
               <div class="card" style="width: 18rem">
                 <img
                   src="./images/acusticas.png"
@@ -229,10 +237,6 @@
                 CONTACTO
               </h5>
               <hr class="mb-4" />
-              </div>
-              </div>
-              <div class="row">
-                <div class="col col-sm-12 col-md-6 mt-3">
               <p>
                 <li class="fa-solid fa-house me-3" style="color: #f7f7f8"></li>
                 Mar del Plata, Montiel 456
@@ -255,18 +259,12 @@
                 ></li>
                 +549 0223-6821945
               </p>
-              </div>
             </div>
-            <div class="row d-flex justify-content-end">
             <div class="col-sm-12 col-md-6 text-end mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 NUESTRAS REDES
               </h5>
               <hr class="mb-4" />
-              </div>
-              </div>
-              <div class="row d-flex justify-content-end">
-                <div class="col text-end mt-3">
               <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
                   <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -281,9 +279,8 @@
                   <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </li>
               </ul>
-              </div>
-              </div>
             </div>
+          </div>
           <div class="row text-start">
             <div class="col text-center mt-4">
               <p>&copy;Musicalmente Vivo 2023 Todos los derechos reservados</p>
@@ -292,7 +289,7 @@
         </div>
       </footer>
     </main>
-    <!-- Scripts -->
+    <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
